--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.0.0",
-    "@docusaurus/types": "3.0.0"
+    "@docusaurus/types": "3.0.0",
+    "@iconify/react": "^4.1.1"
   },
   "browserslist": {
     "production": [
