--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
     branches:
       # - release/3.10  # Set a branch to deploy
       # - release/*  # Set a branch to deploy
-      - master  # Set a branch to deploy
+      - main  # Set a branch to deploy
     tags:
       - v3.*
 
@@ -15,32 +15,25 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        fetch-depth: 8
+        fetch-depth: 0
 
     - name: Setup Node
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20.x'
 
-    - name: Cache dependencies
-      uses: actions/cache@v1
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-
-    - run: yarn
+    - name: "Install dependencies"
+      run: yarn
 
     - name: Build public site
       run: |
         yarn build
 
-    - name: Publish site
+    - name: Publish site to yunionio/yunionio.github.io
       uses: peaceiris/actions-gh-pages@v3
       with:
         personal_token: ${{ secrets.PERSONAL_TOKEN }}
-        publish_dir: ./public
+        publish_dir: ./build
         external_repository: yunionio/yunionio.github.io
         allow_empty_commit: true
         cname: www.cloudpods.org
@@ -56,4 +49,4 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         # deploy config
         AWS_REGION: 'ap-east-1'
-        SOURCE_DIR: 'public'
+        SOURCE_DIR: 'build'
