--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,16 +14,15 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
 
     - name: Setup Node
       uses: actions/setup-node@v4
       with:
         node-version: '20.x'
+        cache: yarn
 
     - name: "Install dependencies"
-      run: yarn
+      run: yarn install --frozen-lockfile
 
     - name: Build public site
       run: |
