--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       # - release/*  # Set a branch to deploy
-      - release/3.10  # Set a branch to deploy
+      - release/3.11  # Set a branch to deploy
       # - main  # Set a branch to deploy
     # tags:
     #   - v3.*
@@ -26,11 +26,15 @@ jobs:
       run: |
         yarn install --frozen-lockfile
 
+    - name: Setup python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.11.3'
+
     - name: Build public site
-      shell: bash
       run: |
-        echo $PWD
-        yarn build
+        ./scripts/build.py --host=https://www.cloudpods.org --edition=ce --multi-versions --no-out-fetch
+        ls -alh ./build
 
     - name: Publish site to yunionio/yunionio.github.io
       uses: peaceiris/actions-gh-pages@v3
