--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,13 +34,13 @@ jobs:
     - name: Build public site
       run: |
         ./scripts/build.py --host=https://www.cloudpods.org --edition=ce --multi-versions --no-out-fetch
-        ls -alh ./build
+        ls -alh ./public
 
     - name: Publish site to yunionio/yunionio.github.io
       uses: peaceiris/actions-gh-pages@v3
       with:
         personal_token: ${{ secrets.PERSONAL_TOKEN }}
-        publish_dir: ./build
+        publish_dir: ./public
         external_repository: yunionio/yunionio.github.io
         allow_empty_commit: true
         cname: www.cloudpods.org
@@ -56,4 +56,4 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         # deploy config
         AWS_REGION: 'ap-east-1'
-        SOURCE_DIR: 'build'
+        SOURCE_DIR: 'public'
