--- a/static/openimages.yaml
+++ b/static/openimages.yaml
@@ -454,101 +454,94 @@
 - distribution: RockyLinux
   os_name: Linux
   os_arch: aarch64
-  os_version: 8.9
-  build: 20231119.0
+  os_version: 8.x
+  build: latest
   source: rockylinux.org
-  url: https://dl.rockylinux.org/pub/rocky/8.9/images/aarch64/Rocky-8-GenericCloud-Base-8.9-20231119.0.aarch64.qcow2
+  url: https://dl.rockylinux.org/pub/rocky/8/images/aarch64/Rocky-8-GenericCloud-Base.latest.aarch64.qcow2
 - distribution: RockyLinux
   os_name: Linux
   os_arch: aarch64
-  os_version: 8.9 LVM
-  build: 20231119.0
+  os_version: 8.x LVM
+  build: latest
   source: rockylinux.org
-  url: https://dl.rockylinux.org/pub/rocky/8.9/images/aarch64/Rocky-8-GenericCloud-LVM-8.9-20231119.0.aarch64.qcow2
+  url: https://dl.rockylinux.org/pub/rocky/8/images/aarch64/Rocky-8-GenericCloud-LVM.latest.aarch64.qcow2
 - distribution: RockyLinux
   os_name: Linux
   os_arch: x86_64
-  os_version: 8.9
-  build: 20231119.0
+  os_version: 8.x
+  build: latest
   source: rockylinux.org
-  url: https://dl.rockylinux.org/pub/rocky/8.9/images/x86_64/Rocky-8-GenericCloud-Base-8.9-20231119.0.x86_64.qcow2
+  url: https://dl.rockylinux.org/pub/rocky/8/images/x86_64/Rocky-8-GenericCloud-Base.latest.x86_64.qcow2
 - distribution: RockyLinux
   os_name: Linux
   os_arch: x86_64
-  os_version: 8.9 LVM
-  build: 20231119.0
+  os_version: 8.x LVM
+  build: latest
   source: rockylinux.org
-  url: https://dl.rockylinux.org/pub/rocky/8.9/images/x86_64/Rocky-8-GenericCloud-LVM-8.9-20231119.0.x86_64.qcow2
-- distribution: RockyLinux
-  os_name: Linux
-  os_arch: aarch64
-  os_version: 9.4
-  build: 20240509.0
-  source: rockylinux.org
-  url: https://dl.rockylinux.org/pub/rocky/9.4/images/aarch64/Rocky-9-GenericCloud-Base-9.4-20240509.0.aarch64.qcow2
+  url: https://dl.rockylinux.org/pub/rocky/8/images/x86_64/Rocky-8-GenericCloud-LVM.latest.x86_64.qcow2
 - distribution: RockyLinux
   os_name: Linux
   os_arch: aarch64
-  os_version: 9.4 LVM
-  build: 20240509.0
+  os_version: 9.x
+  build: latest
   source: rockylinux.org
-  url: https://dl.rockylinux.org/pub/rocky/9.4/images/aarch64/Rocky-9-GenericCloud-LVM-9.4-20240509.0.aarch64.qcow2
+  url: https://dl.rockylinux.org/pub/rocky/9/images/aarch64/Rocky-9-GenericCloud-Base.latest.aarch64.qcow2
+- distribution: RockyLinux
+  os_name: Linux
+  os_arch: aarch64
+  os_version: 9.x LVM
+  build: latest
+  source: rockylinux.org
+  url: https://dl.rockylinux.org/pub/rocky/9/images/aarch64/Rocky-9-GenericCloud-LVM.latest.aarch64.qcow2
 - distribution: RockyLinux
   os_name: Linux
   os_arch: x86_64
-  os_version: 9.4
-  build: 20240509.0
+  os_version: 9.x
+  build: latest
   source: rockylinux.org
-  url: https://dl.rockylinux.org/pub/rocky/9.4/images/x86_64/Rocky-9-GenericCloud-Base-9.4-20240509.0.x86_64.qcow2
+  url: https://dl.rockylinux.org/pub/rocky/9/images/x86_64/Rocky-9-GenericCloud-Base.latest.x86_64.qcow2
 - distribution: RockyLinux
   os_name: Linux
   os_arch: x86_64
-  os_version: 9.4 LVM
-  build: 20240509.0
+  os_version: 9.x LVM
+  build: latest
   source: rockylinux.org
-  url: https://dl.rockylinux.org/pub/rocky/9.4/images/x86_64/Rocky-9-GenericCloud-LVM-9.4-20240509.0.x86_64.qcow2
+  url: https://dl.rockylinux.org/pub/rocky/9/images/x86_64/Rocky-9-GenericCloud-LVM.latest.x86_64.qcow2
 - distribution: AlmaLinux
   os_name: Linux
   os_arch: x86_64
-  os_version: 9.4
-  build: 20240507
+  os_version: 9.x
+  build: latest
   source: mirrors.neusoft.edu.cn
-  url: https://mirrors.neusoft.edu.cn/almalinux/9.4/cloud/x86_64/images/AlmaLinux-9-GenericCloud-9.4-20240507.x86_64.qcow2
+  url: https://mirrors.neusoft.edu.cn/almalinux/9/cloud/x86_64/images/AlmaLinux-9-GenericCloud-latest.x86_64.qcow2
 - distribution: AlmaLinux
   os_name: Linux
   os_arch: aarch64
-  os_version: 9.4
-  build: 20240507
+  os_version: 9.x
+  build: latest
   source: mirrors.neusoft.edu.cn
-  url: https://mirrors.neusoft.edu.cn/almalinux/9.4/cloud/aarch64/images/AlmaLinux-9-GenericCloud-9.4-20240507.aarch64.qcow2
+  url: https://mirrors.neusoft.edu.cn/almalinux/9/cloud/aarch64/images/AlmaLinux-9-GenericCloud-latest.aarch64.qcow2
 - distribution: AlmaLinux
   os_name: Linux
   os_arch: x86_64
-  os_version: 9.3
-  build: 20231113
+  os_version: 8.x
+  build: latest
   source: mirrors.neusoft.edu.cn
-  url: https://mirrors.neusoft.edu.cn/almalinux/9.3/cloud/x86_64/images/AlmaLinux-9-GenericCloud-9.3-20231113.x86_64.qcow2
-- distribution: AlmaLinux
-  os_name: Linux
-  os_arch: aarch64
-  os_version: 9.3
-  build: 20231113
-  source: mirrors.neusoft.edu.cn
-  url: https://mirrors.neusoft.edu.cn/almalinux/9.3/cloud/aarch64/images/AlmaLinux-9-GenericCloud-9.3-20231113.aarch64.qcow2
+  url: https://mirrors.neusoft.edu.cn/almalinux/8/cloud/x86_64/images/AlmaLinux-8-GenericCloud-latest.x86_64.qcow2
 - distribution: AlmaLinux
   os_name: Linux
   os_arch: x86_64
-  os_version: 8.9
-  build: 20231128
+  os_version: 8.x UEFI
+  build: latest
   source: mirrors.neusoft.edu.cn
-  url: https://mirrors.neusoft.edu.cn/almalinux/8.9/cloud/x86_64/images/AlmaLinux-8-GenericCloud-8.9-20231128.x86_64.qcow2
+  url: https://mirrors.neusoft.edu.cn/almalinux/8/cloud/x86_64/images/AlmaLinux-8-GenericCloud-UEFI-latest.x86_64.qcow2
 - distribution: AlmaLinux
   os_name: Linux
   os_arch: aarch64
-  os_version: 8.9
-  build: 20231128
+  os_version: 8.x
+  build: latest
   source: mirrors.neusoft.edu.cn
-  url: https://mirrors.neusoft.edu.cn/almalinux/8.9/cloud/aarch64/images/AlmaLinux-8-GenericCloud-8.9-20231128.aarch64.qcow2
+  url: https://mirrors.neusoft.edu.cn/almalinux/8/cloud/aarch64/images/AlmaLinux-8-GenericCloud-latest.aarch64.qcow2
 - distribution: Fedora
   os_name: Linux
   os_arch: x86_64
@@ -581,9 +574,9 @@
   os_name: Linux
   os_arch: x86_64
   os_version: Stream
-  build: 20240515.236270
+  build: latest
   source: mirrors.neusoft.edu.cn
-  url: https://mirrors.neusoft.edu.cn/archlinux/images/v20240515.236270/Arch-Linux-x86_64-cloudimg-20240515.236270.qcow2
+  url: https://mirrors.neusoft.edu.cn/archlinux/images/latest/Arch-Linux-x86_64-basic.qcow2
 - distribution: FreeBSD
   os_name: FreeBSD
   os_arch: aarch64
