--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,8 +6,8 @@ on:
       # - release/*  # Set a branch to deploy
       - release/3.11  # Set a branch to deploy
       # - main  # Set a branch to deploy
-    # tags:
-    #   - v3.*
+    tags:
+      - v*.*.*
 
 jobs:
   build:
